--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -23,14 +23,9 @@ https://lchttpapi.xczim.com/* url script-response-body https://github.com/ddgksf
 # ✅ Flightradar24
 ^https?:\/\/mobile\.flightradar24\.com\/mobile\/(user-session|\w{9}) url script-echo-response https://github.com/ddgksf2013/dev/raw/main/flightradar24.js
 
-
-
 #>>>>>>>>>>>>>>>>新闻类VIP
 # ✅ 财新周刊
 http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://github.com/ddgksf2013/dev/raw/main/CaiXinZhouKanProCrack.js
-
-
-
 
 #>>>>>>>>>>>>>>>>图影类VIP
 # ✅ Fimo(need登录)
@@ -66,3 +61,6 @@ https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-res
 #>>>>>>>>>>>>>>>>社交VIP
 # ✅ 解锁青藤之恋
 https?:\/\/wx-love-api\.afunapp\.com\/(proporty\/get_user_property|user\/get_user_info) url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/js/qtzl_vip.js
+# ✅ Nicegram: Unlimited Text+解锁订阅
+https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-response text/json echo-response https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Nicegram.js
+
