--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -61,6 +61,5 @@ https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-res
 #>>>>>>>>>>>>>>>>社交VIP
 # ✅ 解锁青藤之恋
 https?:\/\/wx-love-api\.afunapp\.com\/(proporty\/get_user_property|user\/get_user_info) url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/js/qtzl_vip.js
-# ✅ Nicegram: Unlimited Text+解锁订阅
-https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-response text/json echo-response https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Nicegram.js
-
+# ✅ 解锁Nicegram会员(2022.07.15)
+^https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\w+$ url script-echo-response https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/Nicegram/Script/Nicegram.js
