--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -44,6 +44,9 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account\/token url response-body 
 ^https?:\/\/api4\.bybutter\.com\/v4\/(users\/me$|shop\/me\/privileges$) url script-response-body https://github.com/ddgksf2013/dev/raw/main/BybutterProCrack.js
 # ✅ Picsew滚动截图+解锁订阅
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/js/Picsew.js
+BybutterProCrack.js
+# ✅ Colorful—Widget+解锁订阅
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/ColorfulWidget.js
 
 
 #>>>>>>>>>>>>>>>>工具类VIP
