更新 unlock_some_vip.conf

--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -8,7 +8,7 @@
 # > https://github.com/ddgksf2013/dev/raw/master/ForOwnUse.conf
 ##############################################
 
-hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app
+hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com
 
 
 #>>>>>>>>>>>>>>>>生活类VIP
@@ -61,6 +61,10 @@ https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-res
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://github.com/ddgksf2013/dev/raw/main/CamscannerProCrack.js
 # ✅ 解锁Xmind思维导图订阅到2030年
 https?:\/\/www\.xmind\.(cn|net|app)\/\_res\/devices url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/js/Xmind.js
+# ✅ 网易有道词典+解锁VIP
+^https:\/\/dict\.youdao\.com\/vip\/user\/status url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/wyydcd.js
+
+
 
 #>>>>>>>>>>>>>>>>社交VIP
 # ✅ 解锁青藤之恋
