--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -2,13 +2,13 @@
 # > 如需引用请注明出处，谢谢合作！
 # > https://t.me/ddgksf2013
 # > Only for own use, created by ddgksf2013
-# > 更新时间：2023-02-08
+# > 更新时间：2023-03-15
 # > 以下APP解锁，适用【最新版】，墨鱼都已逐一测试其有效性
 # > 仅支持旧版解锁的重写都已删除或已注释
 # > https://github.com/ddgksf2013/dev/raw/master/ForOwnUse.conf
 ##############################################
 
-hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com
+hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com, bmall.camera360.com, api.revenuecat.com
 
 
 #>>>>>>>>>>>>>>>>生活类VIP
@@ -23,9 +23,11 @@ https://lchttpapi.xczim.com/* url script-response-body https://github.com/ddgksf
 # ✅ Flightradar24
 ^https?:\/\/mobile\.flightradar24\.com\/mobile\/(user-session|\w{9}) url script-echo-response https://github.com/ddgksf2013/dev/raw/main/flightradar24.js
 
+
 #>>>>>>>>>>>>>>>>新闻类VIP
 # ✅ 财新周刊
 http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://github.com/ddgksf2013/dev/raw/main/CaiXinZhouKanProCrack.js
+
 
 #>>>>>>>>>>>>>>>>图影类VIP
 # ✅ Fimo(need登录)
@@ -36,19 +38,28 @@ https?:\/\/.*\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-respon
 ^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)\/ url script-response-body https://github.com/ddgksf2013/dev/raw/main/MeiTuXiuXiuProCrack.js
 # ✅ 克拉壁纸
 ^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll|picture\/search|catalog\/listAll|top\/list|picture\/date\?date) url script-response-body https://github.com/ddgksf2013/dev/raw/main/ClarityProCrack.js
-# ✅ Picsart
+# ✅ Picsart美易——解锁VIP
 ^https?:\/\/api\.meiease\.cn\/shop\/subscription\/validate url script-response-body https://github.com/ddgksf2013/dev/raw/main/PicsartProCrack.js
 # ✅ 搜图神器
 http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account\/token url response-body vipType": 0 response-body vipType": 1024
 # ✅ 黄油相机
 ^https?:\/\/api4\.bybutter\.com\/v4\/(users\/me$|shop\/me\/privileges$) url script-response-body https://github.com/ddgksf2013/dev/raw/main/BybutterProCrack.js
-# ✅ Picsew滚动截图+解锁订阅
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/js/Picsew.js
-# ✅ Colorful—Widget+解锁订阅
+# ✅ MX滤镜大师+解锁订阅-pyy
+^https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/MIX.js
+# ✅ VSCO:照片编辑+恢复订阅
+^https:\/\/api\.revenuecat\.com\/v1\/subscribers.+ url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/vsco.js
+
+
+#>>>>>>>>>>>>>>>>小组件VIP
+# ✅ Colorful—Widget+解锁订阅-pyy
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/ColorfulWidget.js
+# ✅ ColorWidgets+解锁订阅-pyy
+^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/ColorWidgets.js
 
 
 #>>>>>>>>>>>>>>>>工具类VIP
+# ✅ Picsew滚动截图+解锁订阅-pyy
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/Picsew.js
 # ✅ TopWidgets
 ^https?:\/\/.*xiaozujian\.com\/api\/app\/config\/userConfig url script-response-body https://github.com/ddgksf2013/dev/raw/main/TopwidgetsProCrack.js
 # ✅ 百度网盘(倍速)
@@ -63,7 +74,6 @@ https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\d{5,10} url echo-res
 https?:\/\/www\.xmind\.(cn|net|app)\/\_res\/devices url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/js/Xmind.js
 # ✅ 网易有道词典+解锁VIP
 ^https:\/\/dict\.youdao\.com\/vip\/user\/status url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/wyydcd.js
-
 
 
 #>>>>>>>>>>>>>>>>社交VIP
