--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -8,7 +8,7 @@
 # > https://github.com/ddgksf2013/dev/raw/master/ForOwnUse.conf
 ##############################################
 
-hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com, bmall.camera360.com, api.revenuecat.com,api-drive.mypikpak.com
+hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com, bmall.camera360.com, api.revenuecat.com,api-drive.mypikpak.com,*.fileball.app
 
 
 #>>>>>>>>>>>>>>>>生活类VIP
@@ -78,7 +78,7 @@ https?:\/\/www\.xmind\.(cn|net|app)\/\_res\/devices url script-response-body htt
 ^https:\/\/api-drive\.mypikpak\.com\/vip\/v\d\/vip\/info url script-response-body https://raw.githubusercontent.com/510004015/Quantumult_X/Remote/Premium/PikPak.js
 # ✅ FileBox解锁永久高级版
 ^https?:\/\/api\.revenuecat\.com\/v1\/((receipts)|(subscribers))\/\$RCAnonymousID%3A\w{32}$ url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/Scripts/FBreceipts.js
-
+^http?s:\/\/functions.fileball.app/checkReceipt$ url script-response-body https://raw.githubusercontent.com/paynexss/Scripts/main/Scripts/FBcheckReceipt.js
 
 #>>>>>>>>>>>>>>>>社交VIP
 # ✅ 解锁青藤之恋
