--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -8,7 +8,7 @@
 # > https://github.com/ddgksf2013/dev/raw/master/ForOwnUse.conf
 ##############################################
 
-hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com, bmall.camera360.com, api.revenuecat.com,api-drive.mypikpak.com,*.fileball.app
+hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com, bmall.camera360.com, api.revenuecat.com,api-drive.mypikpak.com
 
 
 #>>>>>>>>>>>>>>>>生活类VIP
