--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -76,8 +76,8 @@ https?:\/\/www\.xmind\.(cn|net|app)\/\_res\/devices url script-response-body htt
 ^https:\/\/dict\.youdao\.com\/vip\/user\/status url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/wyydcd.js
 # ✅ pikPak网盘
 ^https:\/\/api-drive\.mypikpak\.com\/vip\/v\d\/vip\/info url script-response-body https://raw.githubusercontent.com/510004015/Quantumult_X/Remote/Premium/PikPak.js
-# ✅ FileBox解锁永久高级版
-^https?:\/\/api\.revenuecat\.com\/v1\/((receipts)|(subscribers))\/\$RCAnonymousID%3A\w{32}$ url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/Scripts/FBreceipts.js
+# ❌ FileBox解锁永久高级版
+# ^https?:\/\/api\.revenuecat\.com\/v1\/((receipts)|(subscribers))\/\$RCAnonymousID%3A\w{32}$ url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/Scripts/FBreceipts.js
 
 #>>>>>>>>>>>>>>>>社交VIP
 # ✅ 解锁青藤之恋
