--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -46,9 +46,10 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account\/token url response-body 
 ^https?:\/\/api4\.bybutter\.com\/v4\/(users\/me$|shop\/me\/privileges$) url script-response-body https://github.com/ddgksf2013/dev/raw/main/BybutterProCrack.js
 # ✅ MX滤镜大师+解锁订阅-pyy
 ^https?:\/\/bmall\.camera360\.com\/api\/mix\/recovery url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/MIX.js
+# ✅ TouchRetouch——解锁订阅
+^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/TouchRetouch.js
 # ✅ VSCO:照片编辑+恢复订阅
 ^https:\/\/api\.revenuecat\.com\/v1\/subscribers.+ url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/vsco.js
-
 
 #>>>>>>>>>>>>>>>>小组件VIP
 # ✅ Colorful—Widget+解锁订阅-pyy
@@ -76,8 +77,9 @@ https?:\/\/www\.xmind\.(cn|net|app)\/\_res\/devices url script-response-body htt
 ^https:\/\/dict\.youdao\.com\/vip\/user\/status url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/wyydcd.js
 # ✅ pikPak网盘
 ^https:\/\/api-drive\.mypikpak\.com\/vip\/v\d\/vip\/info url script-response-body https://raw.githubusercontent.com/510004015/Quantumult_X/Remote/Premium/PikPak.js
-# ❌ FileBox解锁永久高级版
-# ^https?:\/\/api\.revenuecat\.com\/v1\/((receipts)|(subscribers))\/\$RCAnonymousID%3A\w{32}$ url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/Scripts/FBreceipts.js
+# ✅ XMind思维导图+解锁订阅
+^https:\/\/www\.xmind\.cn\/_res\/devices url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/xmind.js
+
 
 #>>>>>>>>>>>>>>>>社交VIP
 # ✅ 解锁青藤之恋
