--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -49,7 +49,7 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account\/token url response-body 
 # ✅ TouchRetouch——解锁订阅
 ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/TouchRetouch.js
 # ✅ VSCO:照片编辑+恢复订阅
-^https:\/\/api\.revenuecat\.com\/v1\/subscribers.+ url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/vsco.js
+# ^https:\/\/api\.revenuecat\.com\/v1\/subscribers.+ url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/vsco.js
 
 #>>>>>>>>>>>>>>>>小组件VIP
 # ✅ Colorful—Widget+解锁订阅-pyy
