--- a/task/Remote_Cookie.conf
+++ b/task/Remote_Cookie.conf
@@ -1,10 +1,6 @@
 # 此远程订阅用于解决QX任务脚本的cookie获取，仅适用于QX 1.0.10及更高版本，您可在使用后手动将其禁用，以避免无意义的MITM。
 
-hostname = auth.aliyundrive.com, passport.iqiyi.com, www.52pojie.cn, tiebac.baidu.com, app.bilibili.com, m.bilibili.com, mobile.ximalaya.com, mobwsa.ximalaya.com, mobilehera.ximalaya.com, iacc.rec.qq.com, 180.153.255.*, 180.153.250.*, 180.153.140.*, 114.80.99.*, 114.80.139.*, 114.80.161.*, 1.62.62.64, 61.172.194.184,wapside.189.cn,*.video.qq.com
-
-#阿里云盘签到cookie
-^https:\/\/auth.aliyundrive.com\/v2\/account\/token url script-response-body https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js
-
+hostname = passport.iqiyi.com, www.52pojie.cn, tiebac.baidu.com, c.tieba.baidu.com, app.bilibili.com, m.bilibili.com, mobile.ximalaya.com, mobwsa.ximalaya.com, mobilehera.ximalaya.com, ngabbs.com, iacc.rec.qq.com
 # 爱奇艺 cookie
 ^https?:\/\/passport\.iqiyi\.com\/apis\/user\/ url script-request-header https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/iQIYI.js
 
@@ -12,7 +8,8 @@ hostname = auth.aliyundrive.com, passport.iqiyi.com, www.52pojie.cn, tiebac.baid
 ^https?:\/\/www\.52pojie\.cn\/home\.php\? url script-request-header https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/52pojie.js
 
 # 百度贴吧 cookie
-^https?:\/\/(tiebac\.baidu\.com|180\.97\.\d+\.\d+)\/c\/s\/login url script-request-header https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/TieBa.js
+^https?:\/\/tiebac\.baidu\.com\/c\/u\/follow\/getFoldedMessageUserInfo url script-request-header https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/TieBa.js
+^https?:\/\/c\.tieba\.baidu\.com\/c\/u\/follow\/getFoldedMessageUserInfo url script-request-header https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/TieBa.js
 
 # BiliBili cookie
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/domain\? url script-request-header https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/BiliBili.js
@@ -24,7 +21,5 @@ hostname = auth.aliyundrive.com, passport.iqiyi.com, www.52pojie.cn, tiebac.baid
 # 腾讯视频 cookie
 ^https?:\/\/iacc\.rec\.qq\.com url script-request-header https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/videoqq.js
 
-# 电信营业厅 cookie (190及以后版本)
-^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js
-# 腾讯视频 cookie 
-^https:\/\/access.video.qq.com\/user\/auth_refresh url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.cookie.js
+# NGA玩家社区Cookie
+^https?:\/\/ngabbs.com\/nuke.php$ url script-request-body https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/nga.js
