--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -13,10 +13,12 @@ hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutu
 
 #>>>>>>>>>>>>>>>>生活类VIP
 # ✅ Spotify
-#  部分解锁premium 需iOS15 ,建议重新登录,音质不能设置为超高
+# 2023.6.13部分解锁premium,建议重新登录,并清除缓存,音质不能设置为超高
 # 仓库地址 https://github.com/app2smile/rules
-# 1. 搜索界面 歌单/歌曲可以随意切换完全播放  2. 音乐库已点赞歌曲随意切换完全播放
+# 功能: 1.去除播放广告 2.歌手/专辑列表正常展示 3.去除随机播放
 ^https:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-proto.js
+^https:\/\/spclient\.wg\.spotify\.com\/(artistview\/v1\/artist|album-entity-view\/v2\/album)\/ url script-request-header https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-json.js
+
 # ✅ 一言(need登录)
 ^https:\/\/app\.yiyan\.art\/yiyan\/ url script-response-body https://github.com/ddgksf2013/dev/raw/main/YiYanProCrack.js
 # ✅ 西窗烛(need登录)
