--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -8,7 +8,7 @@
 # > https://github.com/ddgksf2013/dev/raw/master/ForOwnUse.conf
 ##############################################
 
-hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com, bmall.camera360.com, api.revenuecat.com,api-drive.mypikpak.com, api-chat.soulapp.cn
+hostname = mobile.flightradar24.com, *faceu*, api4.bybutter.com, wallpaper.soutushenqi.com, api.tipsoon.com, *xiaozujian, lchttpapi.xczim.com, app.yiyan.art, gateway.caixin.com, notability.com, pan.baidu.com, spclient.wg.spotify.com, *wps*, ticktick.com, ap*.intsig.net, ipadcms.caixin.com, server.yoyiapp.com, *.aoscdn.com, *.xiuxiu.meitu.com, claritywallpaper.com, api.meiease.cn, restore-access.indream.app, appraven.net, buy.itunes.apple.com, *.afunapp.com, www.xmind.cn, www.xmind.net, www.xmind.app, dict.youdao.com, bmall.camera360.com, api.revenuecat.com,api-drive.mypikpak.com, api-chat.soulapp.cn, youtubei.googleapis.com
 
 
 #>>>>>>>>>>>>>>>>生活类VIP
@@ -92,3 +92,6 @@ https?:\/\/wx-love-api\.afunapp\.com\/(proporty\/get_user_property|user\/get_use
 ^https?:\/\/restore-access\.indream\.app\/restoreAccess\?id=\w+$ url script-echo-response https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/js/Nicegram.js
 # Soul 部分解锁-彭于晏
 ^https:\/\/api-chat\.soulapp\.cn\/chat\/limitInfo url script-response-body https://raw.githubusercontent.com/Crazy-Z7/Script/main/Soul.js
+# YouTube去广告-qx(>=iOS15)
+# 去首页瀑布流广告/播放页推荐列表广告(非贴片广告)
+^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next)\? url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/youtube.js
