更新 unlock_some_vip.conf

--- a/rewrite_rule/unlock_some_vip.conf
+++ b/rewrite_rule/unlock_some_vip.conf
@@ -66,7 +66,7 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account\/token url response-body 
 
 #>>>>>>>>>>>>>>>>工具类VIP
 # ✅ Picsew滚动截图+解锁订阅-pyy
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/Picsew.js
+# ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/LiJunYi2/pyyQuantumult-X/main/ycdz/Picsew.js
 # ✅ 百度网盘(倍速)
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://github.com/ddgksf2013/dev/raw/main/BaiDuCloudProCrack.js
 # ✅ Nicegram
