--- a/rewrite_rule/pikpak/pikpak.conf
+++ b/rewrite_rule/pikpak/pikpak.conf
@@ -1,3 +1,3 @@
-^https?:\/\/.*\.mypikpak\.com\/.* url script-response-body https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/pikpak/pikpak_deviceId.js
+^https?:\/\/.*\.mypikpak\.com\/.* url script-request-header https://raw.githubusercontent.com/LiJunYi2/QuantumultX/main/rewrite_rule/pikpak/pikpak_deviceId.js
 
 hostname = *.mypikpak.com
